基础界面画完

--- a/paotuibackstage/src/assets/css/EditElement.scss
+++ b/paotuibackstage/src/assets/css/EditElement.scss
@@ -21,6 +21,9 @@
 .el-table::before{
   height: 0px;
 }
+.pagination{
+  margin: 20px 0;
+}
 .el-table__body tr.hover-row.current-row>td, 
 .el-table__body tr.hover-row.el-table__row--striped.current-row>td, 
 .el-table__body tr.hover-row.el-table__row--striped>td, 
