--- a/paotuibackstage/src/assets/css/EditElement.scss
+++ b/paotuibackstage/src/assets/css/EditElement.scss
@@ -78,6 +78,11 @@
 .el-input__inner,.el-input__icon{
   height: 32px;
   line-height: 32px;
+}
+.el-date-editor .el-range-separator{
+  line-height: 27px;
+}
+.el-form-item{
   width: 240px;
 }
 
